--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>   
 
     </head>
-    <body>
-
+    <body background="background1.jpg">
+<center>
+    <div class="btn btn-primary heading">
+        <h3>AI-ping-pong GAME</h3>
+        <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Instructions</button>
+      </div>
+      <button class="btn btn-info" onclick="startGame()" id="start">Play Game</button>
+      <br> <br>
+      <h3 id="status" class="btn btn-info"></h3>
+  <br> <br>
+  <div id="canvas"></div>
+</center>
         <script src="main.js"></script>
     </body>
 </html>
