--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       </div>
       <button class="btn btn-info" onclick="startGame()" id="start">Play Game</button>
       <br> <br>
+      <button class="btn btn-info" onclick="restart()" id="restart">Restart</button>
+      <br> <br>
+      <div id="myModal" class="modal fade"></div>
+      <h4>|| Game Credit : Neha Talathi</h4>
       <h3 id="status" class="btn btn-info"></h3>
   <br> <br>
   <div id="canvas"></div>
